--- a/LogicSimulatorBase/app/src/main/res/values/strings.xml
+++ b/LogicSimulatorBase/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Logic Simulator</string>
+    <string name="play_button">Play</string>
+    <string name="add_button">Add</string>
 </resources>
