--- a/LogicSimulatorBase/app/src/main/res/values/strings.xml
+++ b/LogicSimulatorBase/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Logic Simulator</string>
     <string name="play_button">Play</string>
     <string name="add_button">Add</string>
+    <string name="grid_draw">GRID</string>
 </resources>
